# magentic-one-edi-prototype

./: README.md  docker-compose.yml  visualize-log.html
api/: Dockerfile  README.md  api.py  pyproject.toml
app/: Dockerfile  README.md  pyproject.toml  run.sh  sample-1.py  sample-2.py  transform-log.py
app/files/: ORDER_D96A.xsd  mapping_rules.txt
