[project]
name = "autogen_magnetic_one_it_stud_io"
version = "0.0.1"
authors = [
  { name="Christian Mueller", email="christian.mueller@it-stud.io" },
]
description = "A prototype for an autogen magnetic one"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "Flask>=2.2.2",
  "Flask[async]>=2.2.2",
  "Flask-RESTful>=0.3.9",
  "Flask-Cors>=5.0.1",
  "Werkzeug>=2.2.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/it-stud-io/autogen-magnetic-one"
Issues = "https://github.com/it-stud-io/autogen-magentic-one/issues"